<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
         <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    -->
    <item
        android:id="@+id/themes"
        android:showAsAction="ifRoom"
        android:title="@string/Themes">
        <menu>
            <item
                android:id="@+id/default_theme"
                android:showAsAction="ifRoom"
                android:title="@string/default_theme"/>
            <item
                android:id="@+id/officeblue_theme"
                android:showAsAction="ifRoom"
                android:title="@string/officeblue_theme"/>
            <item
                android:id="@+id/officegray_theme"
                android:showAsAction="ifRoom"
                android:title="@string/officegray_theme"/>
            <item
                android:id="@+id/officeblack_theme"
                android:showAsAction="ifRoom"
                android:title="@string/officeblack_theme"/>
            <item
                android:id="@+id/androidgray_theme"
                android:showAsAction="ifRoom"
                android:title="@string/androidgray_theme"/>
            <item
                android:id="@+id/applegray_theme"
                android:showAsAction="ifRoom"
                android:title="@string/applegray_theme"/>
            <item
                android:id="@+id/appleivory_theme"
                android:showAsAction="ifRoom"
                android:title="@string/appleivory_theme"/>
            <item
                android:id="@+id/greencolorful_theme"
                android:showAsAction="ifRoom"
                android:title="@string/greencolorful_theme"/>
            <item
                android:id="@+id/pinkcolorful_theme"
                android:showAsAction="ifRoom"
                android:title="@string/pinkcolorful_theme"/>
            <item
                android:id="@+id/itunes_theme"
                android:showAsAction="ifRoom"
                android:title="@string/itunest_theme"/>
            <item
                android:id="@+id/ios7_theme"
                android:showAsAction="ifRoom"
                android:title="@string/ios7_theme"/>
        </menu>
    </item>

</menu>