<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/timesheet1" />

        <ToggleButton
            android:id="@+id/externalfilter_timesheet1toggleBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:checked="true" />

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/timesheet2" />

        <ToggleButton
            android:id="@+id/externalfilter_timesheet2toggleBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:checked="true" />

        <Button 
            android:id="@+id/externalfilter_search"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/search"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <com.flexicious.nestedtreedatagrid.FlexDataGrid
        android:id="@+id/flexDataGrid1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </com.flexicious.nestedtreedatagrid.FlexDataGrid>

</LinearLayout>